moves to latest jupyterlab